--- a/css/classes.css
+++ b/css/classes.css
@@ -8,6 +8,8 @@ This file contains DLx styles that need to be explicitly specified using classes
   --font: 'Fira Sans', 'Calibri', 'DejaVu Sans', 'Verdana', 'Arial', 'Helvetica', sans-serif;
   --font-mono: 'Fira Mono', 'Consolas', 'Monaco', 'DejaVu Mono', 'Courier New', monospace;
   --font-unicode: 'Gentium Plus', 'Charis SIL', 'Doulos SIL', 'Cambria', 'Andika', 'Lucida Sans Unicode', 'Times New Roman', 'Georgia', serif;
+  --link-color: var(--blue);
+  --link-color-visited: var(--purple);
   --padding-ipa: 0.15em;
   --padding-text: 0.25em 0.5em;
   --shadow: 0.075em 0.075em 0.15em var(--gray);
@@ -20,414 +22,6 @@ This file contains DLx styles that need to be explicitly specified using classes
   --underline-blue: 0.075em solid var(--blue);
   --underline-purple: 0.075em solid var(--purple);
   --underline-transparent: 0.075em solid transparent;
-}
-.wugblue {
-  color: var(--wugblue);
-}
-.wugblue-background {
-  background-color: var(--wugblue);
-}
-.verydarkblue {
-  color: var(--verydarkblue);
-}
-.darkblue {
-  color: var(--darkblue);
-}
-.blue {
-  color: var(--blue);
-}
-.lightblue {
-  color: var(--lightblue);
-}
-.verylightblue {
-  color: var(--verylightblue);
-}
-.verydarkblue-background {
-  background-color: var(--verydarkblue);
-  color: white;
-}
-.verydarkblue-background a {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.verydarkblue-background a:link {
-  color: white;
-}
-.verydarkblue-background a:visited {
-  color: white;
-}
-.verydarkblue-background a:hover {
-  border-bottom: var(--underline-white);
-}
-.verydarkblue-background a:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.verydarkblue-background a:active {
-  color: white;
-}
-.darkblue-background {
-  background-color: var(--darkblue);
-  color: white;
-}
-.darkblue-background a {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.darkblue-background a:link {
-  color: white;
-}
-.darkblue-background a:visited {
-  color: white;
-}
-.darkblue-background a:hover {
-  border-bottom: var(--underline-white);
-}
-.darkblue-background a:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.darkblue-background a:active {
-  color: white;
-}
-.blue-background {
-  background-color: var(--blue);
-  color: white;
-}
-.blue-background a {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.blue-background a:link {
-  color: white;
-}
-.blue-background a:visited {
-  color: white;
-}
-.blue-background a:hover {
-  border-bottom: var(--underline-white);
-}
-.blue-background a:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.blue-background a:active {
-  color: white;
-}
-.lightblue-background {
-  background-color: var(--lightblue);
-}
-.verylightblue-background {
-  background-color: var(--verylightblue);
-}
-.gray {
-  color: var(--gray);
-}
-.gray-background {
-  background-color: var(--gray);
-}
-.verylightgreen {
-  color: var(--verylightgreen);
-}
-.lightgreen {
-  color: var(--lightgreen);
-}
-.green {
-  color: var(--green);
-}
-.darkgreen {
-  color: var(--darkgreen);
-}
-.verydarkgreen {
-  color: var(--verydarkgreen);
-}
-.superdarkgreen {
-  color: var(--superdarkgreen);
-}
-.verylightgreen-background {
-  background-color: var(--verylightgreen);
-}
-.lightgreen-background {
-  background-color: var(--lightgreen);
-}
-.green-background {
-  background-color: var(--green);
-}
-.darkgreen-background {
-  background-color: var(--darkgreen);
-}
-.verydarkgreen-background {
-  background-color: var(--verydarkgreen);
-}
-.superdarkgreen-background {
-  background-color: var(--superdarkgreen);
-  color: white;
-}
-.superdarkgreen-background a {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.superdarkgreen-background a:link {
-  color: white;
-}
-.superdarkgreen-background a:visited {
-  color: white;
-}
-.superdarkgreen-background a:hover {
-  border-bottom: var(--underline-white);
-}
-.superdarkgreen-background a:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.superdarkgreen-background a:active {
-  color: white;
-}
-.verylightorange {
-  color: var(--verylightorange);
-}
-.lightorange {
-  color: var(--lightorange);
-}
-.orange {
-  color: var(--orange);
-}
-.darkorange {
-  color: var(--darkorange);
-}
-.verylightorange-background {
-  background-color: var(--verylightorange);
-}
-.lightorange-background {
-  background-color: var(--lightorange);
-}
-.orange-background {
-  background-color: var(--orange);
-}
-.darkorange-background {
-  background-color: var(--darkorange);
-  color: white;
-}
-.darkorange-background a {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.darkorange-background a:link {
-  color: white;
-}
-.darkorange-background a:visited {
-  color: white;
-}
-.darkorange-background a:hover {
-  border-bottom: var(--underline-white);
-}
-.darkorange-background a:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.darkorange-background a:active {
-  color: white;
-}
-.verylightpurple {
-  color: var(--verylightpurple);
-}
-.lightpurple {
-  color: var(--lightpurple);
-}
-.purple {
-  color: var(--purple);
-}
-.darkpurple {
-  color: var(--darkpurple);
-}
-.verydarkpurple {
-  color: var(--verydarkpurple);
-}
-.verylightpurple-background {
-  background-color: var(--verylightpurple);
-}
-.lightpurple-background {
-  background-color: var(--lightpurple);
-  color: white;
-}
-.lightpurple-background a {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.lightpurple-background a:link {
-  color: white;
-}
-.lightpurple-background a:visited {
-  color: white;
-}
-.lightpurple-background a:hover {
-  border-bottom: var(--underline-white);
-}
-.lightpurple-background a:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.lightpurple-background a:active {
-  color: white;
-}
-.purple-background {
-  background-color: var(--purple);
-  color: white;
-}
-.purple-background a {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.purple-background a:link {
-  color: white;
-}
-.purple-background a:visited {
-  color: white;
-}
-.purple-background a:hover {
-  border-bottom: var(--underline-white);
-}
-.purple-background a:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.purple-background a:active {
-  color: white;
-}
-.darkpurple-background {
-  background-color: var(--darkpurple);
-  color: white;
-}
-.darkpurple-background a {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.darkpurple-background a:link {
-  color: white;
-}
-.darkpurple-background a:visited {
-  color: white;
-}
-.darkpurple-background a:hover {
-  border-bottom: var(--underline-white);
-}
-.darkpurple-background a:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.darkpurple-background a:active {
-  color: white;
-}
-.verydarkpurple-background {
-  background-color: var(--verydarkpurple);
-  color: white;
-}
-.verydarkpurple-background a {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.verydarkpurple-background a:link {
-  color: white;
-}
-.verydarkpurple-background a:visited {
-  color: white;
-}
-.verydarkpurple-background a:hover {
-  border-bottom: var(--underline-white);
-}
-.verydarkpurple-background a:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.verydarkpurple-background a:active {
-  color: white;
-}
-.verylightred {
-  color: var(--verylightred);
-}
-.lightred {
-  color: var(--lightred);
-}
-.red {
-  color: var(--red);
-}
-.darkred {
-  color: var(--darkred);
-}
-.verydarkred {
-  color: var(--verydarkred);
-}
-.verylightred-background {
-  background-color: var(--verylightred);
-}
-.lightred-background {
-  background-color: var(--lightred);
-}
-.red-background {
-  background-color: var(--red);
-  color: white;
-}
-.red-background a {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.red-background a:link {
-  color: white;
-}
-.red-background a:visited {
-  color: white;
-}
-.red-background a:hover {
-  border-bottom: var(--underline-white);
-}
-.red-background a:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.red-background a:active {
-  color: white;
-}
-.darkred-background {
-  background-color: var(--darkred);
-  color: white;
-}
-.darkred-background a {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.darkred-background a:link {
-  color: white;
-}
-.darkred-background a:visited {
-  color: white;
-}
-.darkred-background a:hover {
-  border-bottom: var(--underline-white);
-}
-.darkred-background a:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.darkred-background a:active {
-  color: white;
-}
-.verydarkred-background {
-  background-color: var(--verydarkred);
-  color: white;
-}
-.verydarkred-background a {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.verydarkred-background a:link {
-  color: white;
-}
-.verydarkred-background a:visited {
-  color: white;
-}
-.verydarkred-background a:hover {
-  border-bottom: var(--underline-white);
-}
-.verydarkred-background a:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.verydarkred-background a:active {
-  color: white;
-}
-.lightblue-transparent {
-  background-color: var(--lightblue-transparent);
-}
-.verylightblue-transparent {
-  background-color: var(--verylightblue-transparent);
 }
 .abbr {
   font-style: italic;
@@ -455,6 +49,8 @@ This file contains DLx styles that need to be explicitly specified using classes
   display: list-item;
 }
 .button {
+  --link-color: white;
+  --link-color-visited: white;
   background-color: var(--blue);
   color: white;
   align-items: center;
@@ -464,25 +60,6 @@ This file contains DLx styles that need to be explicitly specified using classes
   cursor: pointer;
   padding: var(--padding-text);
   text-align: center;
-}
-.button a {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.button a:link {
-  color: white;
-}
-.button a:visited {
-  color: white;
-}
-.button a:hover {
-  border-bottom: var(--underline-white);
-}
-.button a:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.button a:active {
-  color: white;
 }
 .button:active {
   box-shadow: var(--shadow-button-press);
@@ -506,26 +83,9 @@ This file contains DLx styles that need to be explicitly specified using classes
   cursor: pointer;
   padding: var(--padding-text);
   text-align: center;
+  --link-color: white;
+  --link-color-visited: white;
   background-color: var(--red);
-  color: white;
-}
-.button-red a {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.button-red a:link {
-  color: white;
-}
-.button-red a:visited {
-  color: white;
-}
-.button-red a:hover {
-  border-bottom: var(--underline-white);
-}
-.button-red a:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.button-red a:active {
   color: white;
 }
 .button-red:active {
@@ -540,25 +100,6 @@ This file contains DLx styles that need to be explicitly specified using classes
   box-shadow: none;
   cursor: not-allowed;
   opacity: 0.40;
-}
-.button-red a {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.button-red a:link {
-  color: white;
-}
-.button-red a:visited {
-  color: white;
-}
-.button-red a:hover {
-  border-bottom: var(--underline-white);
-}
-.button-red a:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.button-red a:active {
-  color: white;
 }
 .cite {
   font-style: italic;
@@ -628,6 +169,8 @@ This file contains DLx styles that need to be explicitly specified using classes
   text-indent: -1em;
 }
 .input[type=button] {
+  --link-color: white;
+  --link-color-visited: white;
   background-color: var(--blue);
   color: white;
   align-items: center;
@@ -637,25 +180,6 @@ This file contains DLx styles that need to be explicitly specified using classes
   cursor: pointer;
   padding: var(--padding-text);
   text-align: center;
-}
-.input[type=button] a {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.input[type=button] a:link {
-  color: white;
-}
-.input[type=button] a:visited {
-  color: white;
-}
-.input[type=button] a:hover {
-  border-bottom: var(--underline-white);
-}
-.input[type=button] a:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.input[type=button] a:active {
-  color: white;
 }
 .input[type=button]:active {
   box-shadow: var(--shadow-button-press);
@@ -829,26 +353,9 @@ This file contains DLx styles that need to be explicitly specified using classes
   cursor: pointer;
   padding: var(--padding-text);
   text-align: center;
+  --link-color: white;
+  --link-color-visited: white;
   background-color: var(--superdarkgreen);
-  color: white;
-}
-.input[type=reset] a {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.input[type=reset] a:link {
-  color: white;
-}
-.input[type=reset] a:visited {
-  color: white;
-}
-.input[type=reset] a:hover {
-  border-bottom: var(--underline-white);
-}
-.input[type=reset] a:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.input[type=reset] a:active {
   color: white;
 }
 .input[type=reset]:active {
@@ -863,25 +370,6 @@ This file contains DLx styles that need to be explicitly specified using classes
   box-shadow: none;
   cursor: not-allowed;
   opacity: 0.40;
-}
-.input[type=reset] a {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.input[type=reset] a:link {
-  color: white;
-}
-.input[type=reset] a:visited {
-  color: white;
-}
-.input[type=reset] a:hover {
-  border-bottom: var(--underline-white);
-}
-.input[type=reset] a:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.input[type=reset] a:active {
-  color: white;
 }
 .input[type=search] {
   background-color: white;
@@ -905,6 +393,8 @@ This file contains DLx styles that need to be explicitly specified using classes
   cursor: not-allowed;
 }
 .input[type=submit] {
+  --link-color: white;
+  --link-color-visited: white;
   background-color: var(--blue);
   color: white;
   align-items: center;
@@ -914,25 +404,6 @@ This file contains DLx styles that need to be explicitly specified using classes
   cursor: pointer;
   padding: var(--padding-text);
   text-align: center;
-}
-.input[type=submit] a {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.input[type=submit] a:link {
-  color: white;
-}
-.input[type=submit] a:visited {
-  color: white;
-}
-.input[type=submit] a:hover {
-  border-bottom: var(--underline-white);
-}
-.input[type=submit] a:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.input[type=submit] a:active {
-  color: white;
 }
 .input[type=submit]:active {
   box-shadow: var(--shadow-button-press);
@@ -1076,72 +547,40 @@ This file contains DLx styles that need to be explicitly specified using classes
   font-weight: bold;
 }
 .link {
-  color: var(--blue);
+  color: var(--link-color);
   border-bottom: var(--underline-transparent);
 }
 .link:link {
-  color: var(--blue);
+  color: var(--link-color);
 }
 .link:visited {
-  color: var(--purple);
+  color: var(--link-color-visited);
 }
 .link:hover {
-  border-bottom: var(--underline-blue);
+  border-bottom: var(--link-color);
 }
 .link:active {
-  color: var(--blue);
+  color: var(--link-color);
 }
 .link:visited:hover {
-  border-bottom: var(--underline-purple);
+  border-bottom: var(--link-color-visited);
 }
 .link:visited:active {
-  color: var(--purple);
+  color: var(--link-color-visited);
 }
 .link-white {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.link-white:link {
-  color: white;
-}
-.link-white:visited {
-  color: white;
-}
-.link-white:hover {
-  border-bottom: var(--underline-white);
-}
-.link-white:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.link-white:active {
-  color: white;
+  --link-color: white;
+  --link-color-visited: white;
 }
 .nav ul {
+  --link-color: white;
+  --link-color-visited: white;
   background-color: var(--blue);
   color: white;
   flex-direction: row;
   flex-wrap: wrap;
   font-size: 1.25em;
   justify-content: space-around;
-}
-.nav ul a {
-  border-bottom: var(--underline-transparent);
-  color: white;
-}
-.nav ul a:link {
-  color: white;
-}
-.nav ul a:visited {
-  color: white;
-}
-.nav ul a:hover {
-  border-bottom: var(--underline-white);
-}
-.nav ul a:visited:hover {
-  border-bottom: var(--underline-white);
-}
-.nav ul a:active {
-  color: white;
 }
 .nav ul li {
   padding: 0.5em;
@@ -1207,26 +646,26 @@ This file contains DLx styles that need to be explicitly specified using classes
   padding-left: var(--padding-ipa);
 }
 .reference-list a {
-  color: var(--blue);
+  color: var(--link-color);
   border-bottom: var(--underline-transparent);
 }
 .reference-list a:link {
-  color: var(--blue);
+  color: var(--link-color);
 }
 .reference-list a:visited {
-  color: var(--purple);
+  color: var(--link-color-visited);
 }
 .reference-list a:hover {
-  border-bottom: var(--underline-blue);
+  border-bottom: var(--link-color);
 }
 .reference-list a:active {
-  color: var(--blue);
+  color: var(--link-color);
 }
 .reference-list a:visited:hover {
-  border-bottom: var(--underline-purple);
+  border-bottom: var(--link-color-visited);
 }
 .reference-list a:visited:active {
-  color: var(--purple);
+  color: var(--link-color-visited);
 }
 .reference-list h1 {
   font-size: 1.75em;
