--- a/css/elements.css
+++ b/css/elements.css
@@ -1,3 +1,41 @@
 .abbr {
   font-style: italic;
 }
+.button {
+  --link-color: white;
+  --link-color-visited: white;
+  background-color: var(--blue);
+  color: white;
+  align-items: center;
+  background-image: linear-gradient(135deg, rgba(255, 255, 255, 0.15), transparent);
+  border: 0;
+  border-radius: var(--border-radius);
+  box-shadow: var(--shadow-button);
+  cursor: pointer;
+  font: inherit;
+  outline: 0;
+  padding: var(--padding-text);
+  text-align: center;
+}
+.button:active {
+  --shadow-button: 0 0 0 0.075em rgba(0, 0, 0, 0.15) inset, 0 0 0.5em rgba(0, 0, 0, 0.2) inset;
+}
+.button:hover,
+.button:focus {
+  background-image: linear-gradient(135deg, transparent, rgba(0, 0, 0, 0.15));
+}
+.button:disabled {
+  background-image: none;
+  box-shadow: none;
+  cursor: not-allowed;
+  opacity: 0.40;
+}
+.button-red {
+  --link-color: white;
+  --link-color-visited: white;
+  background-color: var(--red);
+  color: white;
+}
+.cite {
+  font-style: italic;
+}
