--- a/less/fonts.less
+++ b/less/fonts.less
@@ -240,7 +240,7 @@
 // Gentium Plus Regular
 //
 // Markup:
-// <p class=unicode><strong>Gentium Plus Regular</strong> is used for text that needs to support Unicode characters, such as data input fields.</p>
+// <p style="font-family: 'Gentium Plus'; font-size: 1.15em;"><strong>Gentium Plus Regular</strong> is used for text that needs to support Unicode characters, such as data input fields. It should typically have <code>font-size: 1.15em;</code> so that it occupies the same line height as Fira Sans.</p>
 //
 // Weight: 1
 //
@@ -259,7 +259,7 @@
 // Gentium Plus Regular Italic
 //
 // Markup:
-// <p class=unicode style="font-style: italic;"><strong>Gentium Plus Regular Italic</strong> is used for italicized text that requires Unicode support, such as inline citation of data.</p>
+// <p style="font-family: 'Gentium Plus'; font-size: 1.15em; font-style: italic;"><strong>Gentium Plus Regular Italic</strong> is used for italicized text that requires Unicode support, such as inline citation of data. It should typically have <code>font-size: 1.15em;</code> so that it occupies the same line height as Fira Sans.</p>
 //
 // Weight: 2
 //
