--- a/less/global.less
+++ b/less/global.less
@@ -19,7 +19,7 @@ abbr, acronym, b, bdo, big, br, cite, code, del, dfn, em, i, ins, kbd, mark, q, 
   }
 }
 
-abbr { .abbr; }
+// abbr { .abbr; }
 
 body {
   box-sizing: border-box;
@@ -27,7 +27,7 @@ body {
   line-height: 1.5;
 }
 
-button { .button; }
+// button { .button; }
 
 cite { .cite; }
 
