--- a/css/patterns.css
+++ b/css/patterns.css
@@ -1,3 +1,7 @@
 .kss-modifiers__example {
+  border-collapse: collapse;
   font-family: var(--font);
+  line-height: 1.5;
+  text-decoration: none;
+  vertical-align: baseline;
 }
