--- a/less/patterns.less
+++ b/less/patterns.less
@@ -1,3 +1,9 @@
+@import 'less/fonts.less';
+@import 'less/colors.less';
+@import 'less/variables.less';
+@import 'less/elements.less';
+@import 'less/components.less';
+
 .kss-modifiers__example {
   border-collapse: collapse;
   font-family: var(--font);
